--- a/skinDetectionModel.ipynb
+++ b/skinDetectionModel.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "skinDetectionModel.ipynb",
-      "provenance": [],
-      "authorship_tag": "ABX9TyPGoHT/KYmHfVyI01IiruOT"
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
